# temp-cs-notes

./: H2S_docs.md  binaries.md  character_encoding.md  cors.md  database_migrations.md  fail2Ban.md  files.md  http_streaming.md  ivanti_secure_usage.md  onboarding_yourself.md  pipes_processes.md  quality_code_reviews.md  todo.md  useImmer.md  xtermJS.md
C/: flexible_array.md  macros_explained.md  memcpy_explained.c  memory_addresses.md  pointer_review.md
CA_SSL/: 7_SAML.md  7_object_store.md
CILogon/: CILogon_Js2.md  README.md
Cassandra/: 12_read_write_paths.md  1_intro.md  3_partitioning_rings_tokens.md  4_replication.md  5_keyspaces_tables.md  6_consistency_inserts_selects.md  7_timestamps_ttl_etc.md  README.md
Concurrency/: 1_threads.md  2_multithreading_multiprocessing.md  3_asyncIO.md  4_wsgi_asgi.md  5_closing_notes.md
DSA/: README.md
DevOps/: README.md
FastAPI_Notes/: fastapi.md  handling_forms.md
Git2/: README.md  git_config.md  git_pull_fetch.md  git_stash.md  rebase.md
STATS-350/: KevinNguyenMidtermFile.Rmd  Nguyen_midterm_review.Rmd  README.md
Security/: 10_firewalls.md  README.md
Webservers/: Apache.md  README.md
dist_systems/: README.md
linux_again/: command.md  file_perms.md  file_system.md  local_host.md
machine_learns/: README.md  generated_roadmap.md
makefile_notes/: make_notes.md
mermaid/: README.md
py_packaging/: toml.md  (+2 more)
py_packaging/example_project/p1/: main.py  pyproject.toml
py_packaging/example_project/p1/utils/: __init__.py  add.py
uv_package_manager/my-first-uv/: README.md  main.py  pyproject.toml  tests.py
(+267 files in other folders)
